plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'cafe.snails'
version = '0.0.1-SNAPSHOT'
description = 'EcomAgents'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}


repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.agentscope:agentscope-spring-boot-starter:1.1.0-RC1'
    implementation 'io.agentscope:agentscope-harness:1.1.0-RC1'
    implementation 'io.agentscope:agentscope-extensions-rag-simple:1.1.0-RC1'
    implementation 'com.knuddels:jtokkit:1.1.0'
    implementation 'org.apache.pdfbox:pdfbox:3.0.4'
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

bootRun {
    jvmArgs = [
        '-Dhttps.proxyHost=127.0.0.1',
        '-Dhttps.proxyPort=15236',
        '-Dhttp.proxyHost=127.0.0.1',
        '-Dhttp.proxyPort=15236'
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.37
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
